--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,20 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+
+
+
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 22s linear infinite;
+  min-width: max-content;
+}
